--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h3>Generate a Random Color br press button</h3>
+    <h3>Generate a Random Color <br> press button</h3>
     <button>Generate Color</button>
     <div>In RGB Form (RED,GREEN,BLUE)</div>
 
